# hermes

./: .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Main.hs  README.md  cabal.project  cabal.project.freeze  haskell-ci.config  hermes-json.cabal  hermes.cabal  run_bench  simdjson.cabal
.github/workflows/: ci.yaml  haskell-ci.yml
benchmarks/: Main.hs  test.json  test_array.json  test_ooo.json
cbits/: lib.cpp  simdjson.cpp
cbits/simdjson/: simdjson.h
hermes-aeson/: CHANGELOG.md  README.md  cabal.project  hermes-aeson.cabal
hermes-aeson/src/Data/Hermes/: Aeson.hs
hermes-aeson/tests/: test.hs
hermes-bench/: bench.csv  cabal.project  hermes-bench.cabal  package.json  run_bench  update-readme.js
hermes-bench/src/: Main.hs
hermesbench/: bench.csv  bench_threaded.csv  cabal.project  hermesbench.cabal  run_bench  run_bench_threaded  update-readme.js
hermesbench/json/: image_obj.json  small_map.json
hermesbench/src/: Main.hs
src/: MyLib.hs
src/Data/: Hermes.hs  SIMDJSON.hs
src/Data/Attoparsec/: Time.hs
src/Data/Hermes/: Decoder.hs  SIMDJSON.hs
src/Data/Hermes/Decoder/: Internal.hs  Path.hs  Time.hs  Types.hs  Value.hs
src/Data/Hermes/Decoder/Internal/: Scientific.hs
src/Data/Hermes/SIMDJSON/: Bindings.hs  Types.hs  Wrapper.hs
tests/: test.hs
