cabal-version:      3.0
name:               hermes
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
extra-source-files: cbits, CHANGELOG.md

library
  exposed-modules:  Data.Hermes
  build-depends:    
    attoparsec,
    base,
    bytestring,
    dlist,
    scientific,
    transformers,
    text,
    unliftio-core,
    unliftio
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall 
  cxx-sources: 
    cbits/lib.cpp 
    cbits/simdjson.cpp
  cxx-options: -std=c++17 -DNDEBUG
  include-dirs: 
    cbits
  install-includes: 
    cbits/simdjson.h
  extra-libraries: 
    stdc++

test-suite hermes-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test.hs
  build-depends:    
    aeson,
    base ^>=4.14.3.0,
    bytestring,
    hedgehog,
    hermes,
    scientific,
    tasty,
    tasty-hedgehog,
    text
