cabal-version:      3.0
name:               hermes
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
extra-source-files: cbits, CHANGELOG.md

flag strict
  description: Turn on strict GHC options
  default: False
  manual: True

flag native_comp
  description: Target native architecture for C++ compiler
  default: True
  manual: True

flag debug
  description: Enable C++ debug support
  default: False
  manual: True

library
  exposed-modules: 
    Data.Hermes
  build-depends:   
    attoparsec         >= 0.13.1 && < 0.15,
    attoparsec-iso8601 >= 1.0.2.0 && < 1.0.3.0,
    base               >= 4.14.1 && < 4.15,
    bytestring         >= 0.10.12 && < 0.11,
    deepseq            >= 1.4.4 && < 1.5,
    dlist              >= 0.8 && < 1.1,
    scientific         >= 0.3.6 && < 0.4,
    text               >= 1.2.4 && < 1.3,
    transformers       >= 0.5.6 && < 0.6,
    time               >= 1.9.3 && < 1.10,
    time-compat        >= 1.9.5 && < 1.10,
    unliftio           >= 0.2.14 && < 0.3,
    unliftio-core      >= 0.2.0 && < 0.3

  hs-source-dirs:   src
  default-language: Haskell2010
  if flag(strict)
    ghc-options: 
      -Wall 
      -Werror 
      -Wcompat 
      -Widentities 
      -Wincomplete-uni-patterns 
      -Wincomplete-record-updates 
      -Wmissing-export-lists 
      -Wno-implicit-prelude 
      -Wno-safe 
      -Wno-unsafe 
      -Wnoncanonical-monad-instances 
      -Wredundant-constraints 
      -Wpartial-fields 
      -Wmissed-specialisations 
      -Wunused-packages 
      -O2
  else
    ghc-options: -O2 -Wall
  cxx-sources: 
    cbits/lib.cpp 
    cbits/simdjson.cpp
  if flag(native_comp)
    if flag (debug)
      cxx-options: -std=c++17 -march=native -O3
    else
      cxx-options: -std=c++17 -DNDEBUG -march=native -O3
  else
    if flag (debug)
      cxx-options: -std=c++17 -O3
    else
      cxx-options: -std=c++17 -DNDEBUG -O3
  include-dirs: 
    cbits
  install-includes: 
    cbits/simdjson.h
  extra-libraries: 
    stdc++

test-suite hermes-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test.hs
  ghc-options: -Wall 
  build-depends:    
    aeson          >= 2.0.1 && < 2.1,
    base           >= 4.14.3 && < 4.15,
    bytestring     >= 0.10.12 && < 0.11,
    containers     >= 0.6.5 && < 0.7,
    scientific     >= 0.3.7 && < 0.4,
    text           >= 1.2.4 && < 1.3,
    hedgehog       >= 1.0.5 && < 1.1,
    tasty          >= 1.4.2 && < 1.5,
    tasty-hedgehog >= 1.1.0 && < 1.2,
    time           >= 1.9.3 && < 1.10,
    hermes

