cabal-version:      3.0
name:               simdjson
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
extra-source-files: cbits, CHANGELOG.md

executable simdjson
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: 
    base,
    simdjson

library
  exposed-modules:  Data.SIMDJSON
  build-depends:    
    aeson,
    base,
    bytestring,
    dlist,
    text
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall 
  cxx-sources: 
    cbits/lib.cpp 
    cbits/simdjson.cpp
  cxx-options: -std=c++17 
  include-dirs: 
    cbits
  install-includes: 
    cbits/simdjson.h
  extra-libraries: 
    stdc++

test-suite simdjson-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base ^>=4.14.3.0

benchmark simdjson-bench
  build-depends:
    aeson,
    base,
    bytestring,
    deepseq,
    simdjson,
    tasty,
    tasty-bench,
    text
  default-language: Haskell2010
  if impl(ghc >= 8.10)
    ghc-options: -Wall -with-rtsopts=-A32m -with-rtsopts=--nonmoving-gc
  else
    ghc-options: -Wall -with-rtsopts=-A32m
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
