cabal-version:      3.0
name:               hermes-aeson
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
  exposed-modules:
    Data.Hermes.Aeson
  build-depends:
    aeson ^>= 2.1.2.1,
    base  ^>= 4.16.4.0,
    hermes-json
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test.hs
  ghc-options: -Wall
  build-depends:
    aeson          >= 2.0.1 && < 2.2,
    base,
    bytestring,
    hermes-aeson,
    hermes-json,
    tasty          >= 1.4.2 && < 1.6,
    tasty-hunit    >= 0.10.0 && < 0.11
