cabal-version: 3.0
name: hermes-bench
version: 0.1.0.0
license: MIT
author: Josh Miller
maintainer: notjoshmiller@gmail.com

extra-source-files:
    json/twitter100.json
  , json/persons9000.json

benchmark bench
  build-depends:
    aeson       >= 2.1.2.1,
    base        >= 4.14.3 && < 4.21,
    bytestring  >= 0.10.12 && < 0.13,
    deepseq     >= 1.4.4 && < 1.6,
    containers  >= 0.6.5 && < 0.8,
    json-stream >= 0.4 && < 0.6,
    scientific  >= 0.3.7 && < 0.6,
    text        >= 2.0 && < 2.2,
    tasty       >= 1.4.2 && < 1.7,
    tasty-bench >= 0.3 && < 0.5,
    hermes-json,
    hermes-aeson
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:
    -with-rtsopts=-A64m
    -fproc-alignment=64
    -Wall
  hs-source-dirs:     src
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
