cabal-version:      3.0
name:               hermesbench
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com

extra-source-files:  json/twitter100.json
                   , json/persons9000.json
                   , json/small_map.json

benchmark bench 
  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    deepseq,
    hermes,
    scientific,
    tasty,
    tasty-bench,
    text,
    waargonaut
  default-language: Haskell2010
  if impl(ghc >= 8.10)
    ghc-options: -Wall -O2 -with-rtsopts=-A32m -with-rtsopts=--nonmoving-gc
  else
    ghc-options: -Wall -O2 -with-rtsopts=-A32m
  hs-source-dirs:   src
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
