cabal-version: 3.0
name: hermesbench
version: 0.1.0.0
license: MIT
author: Josh Miller
maintainer: notjoshmiller@gmail.com

extra-source-files:  
    json/twitter100.json
  , json/persons9000.json
  , json/small_map.json

benchmark bench 
  build-depends:
    aeson       >= 1.5.6 && < 1.6,
    base        >= 4.14.3 && < 4.15,
    bytestring  >= 0.10.12 && < 0.11,
    deepseq     >= 1.4.4 && < 1.5,
    containers  >= 0.6.5 && < 0.7,
    scientific  >= 0.3.7 && < 0.4,
    text        >= 1.2.4 && < 1.3,
    tasty       >= 1.4.2 && < 1.5,
    tasty-bench >= 0.3 && < 0.4,
    waargonaut  >= 0.8.0 && < 0.9,
    hermes-json
  default-language: Haskell2010
  if impl(ghc >= 8.10)
    ghc-options: -Wall -O2 -with-rtsopts=-A32m -with-rtsopts=--nonmoving-gc
  else
    ghc-options: -Wall -O2 -with-rtsopts=-A32m
  hs-source-dirs:   src
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
